--- a/front/main.css
+++ b/front/main.css
@@ -1,3 +1,12 @@
+:root {
+
+}
+
+* {
+  margin:0;
+  padding:0;
+}
+
 table {
   margin: auto;
   max-width:1200px; 
@@ -43,7 +52,30 @@ tr:nth-last-child(-n+4) {
 }
 
 @media screen and (max-width: 768px) {
-  table td,table th:nth-child(3) {
+  /* POS Equipo PJ G E P GF GC DG PTS */
+  /*  1     2    3 4 5 6  7  8 9   10 */
+  table td:nth-child(1) {
+    display:none;
+  }
+  table td:nth-child(7) {
+    display:none;
+  }
+  table td:nth-child(8) {
+    display:none;
+  }
+  table td:nth-child(9) {
+    display:none;
+  }
+  table th:nth-child(1) {
+    display:none;
+  }
+  table th:nth-child(7) {
+    display:none;
+  }
+  table th:nth-child(8) {
+    display:none;
+  }
+  table th:nth-child(9) {
     display:none;
   }
   /* table th:nth-child(3) {
