changed mongodb storage to array of objects

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,9 +14,16 @@
   <tbody>
     {{#each tableData}}
       <tr>
-      {{#each this}}
-        <td>{{this}}</td>
-      {{/each}}
+      <td>{{this.POS}}</td>
+      <td>{{this.NOMBRE}}</td>
+      <td>{{this.PJ}}</td>
+      <td>{{this.G}}</td>
+      <td>{{this.E}}</td>
+      <td>{{this.P}}</td>
+      <td>{{this.GF}}</td>
+      <td>{{this.GC}}</td>
+      <td>{{this.DG}}</td>
+      <td>{{this.PTS}}</td>
       </tr>
     {{/each}}
   </tbody>
