added team shields

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
     {{#each tableData}}
       <tr>
       <td>{{this.POS}}</td>
-      <td>{{this.NOMBRE}}</td>
+      <td><img src="{{this.IMG}}"></img><span>{{this.NOMBRE}}</span></td>
       <td>{{this.PJ}}</td>
       <td>{{this.G}}</td>
       <td>{{this.E}}</td>
