--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Roboto:wght@100;300;400;700&display=swap');
+
 :root {
 
 }
@@ -5,6 +7,10 @@
 * {
   margin:0;
   padding:0;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
 table {
@@ -21,12 +27,24 @@ table {
   overflow-x: scroll;
 }
 
+th {
+  height:60px;
+  background:darkblue;
+  color:white;
+}
+
 td {
   padding:8px;
-  text-align: start;
   overflow-wrap:break-word;
+  text-align: center;
   word-break: break-all;
   hyphens:auto; 
+  height:40px;
+}
+
+td:nth-child(2) {
+  text-align: left;
+  font-weight: bold;
 }
 
 tr {
@@ -42,6 +60,7 @@ tr:hover {
 tr:nth-child(even) {
   background:rgb(247, 247, 247);
 }
+
 
 tr:nth-child(-n+4) {
   background:lightblue;
