--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
+<div class="table-title-container"><h1>Tabla de posiciones de la Liga Profesional de Fútbol</h1></div>
 <table id="posiciones">
   <thead>
     <th>POS</th>
@@ -15,7 +16,7 @@
     {{#each tableData}}
       <tr>
       <td>{{this.POS}}</td>
-      <td><img src="{{this.IMG}}"></img><span>{{this.NOMBRE}}</span></td>
+      <td><div class="align-center"><img src="{{this.IMG}}"></img><span>{{this.NOMBRE}}</span></div></td>
       <td>{{this.PJ}}</td>
       <td>{{this.G}}</td>
       <td>{{this.E}}</td>
