--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="/stylesheets/main.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Posiciones LPF</title>
-</head>
-<body>
-  <header></header>
-  {{{ body }}}
-  <footer></footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Posiciones LPF</title>
+  </head>
+  <body>
+    <header></header>
+    {{{body}}}
+    <footer><span>Código fuente:
+      <a href="https://github.com/blautista/tabla-LPF">https://github.com/blautista/tabla-LPF</a>
+      - Bautista Romanazzi. 
+    </span></footer>
+  </body>
 </html>
