--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<div class="table-title-container"><h1>Tabla de posiciones de la Liga Profesional de Fútbol</h1></div>
+<div class="table-title-container"><h1>Tabla LPF</h1></div>
 <table id="posiciones">
   <thead>
     <th>POS</th>
