added general SEO improvements

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -2,16 +2,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="/stylesheets/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Posiciones LPF</title>
+    <meta name="description" content="Tabla de posiciones de la LPF, obtiene ya las ultimas posiciones de tus equipos favoritos de Argentina. River Plate, Boca Juniors, Independiente, Racing Club." />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="author" href="https://github.com/blautista" />
+    <title>Tabla de posiciones de la Liga Profesional de Fútbol</title>
   </head>
   <body>
     <header></header>
     {{{body}}}
     <footer><span>Código fuente:
-      <a href="https://github.com/blautista/tabla-LPF">https://github.com/blautista/tabla-LPF</a>
-      - Bautista Romanazzi. 
-    </span></footer>
+        <a
+          href="https://github.com/blautista/tabla-LPF"
+          title="https://github.com/blautista/tabla-LPF"
+        >https://github.com/blautista/tabla-LPF</a>
+        - Bautista Romanazzi.
+      </span></footer>
   </body>
 </html>
