--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
     {{#each tableData}}
       <tr>
       <td>{{this.POS}}</td>
-      <td><div class="align-center"><img src="{{this.IMG}}"></img><span>{{this.NOMBRE}}</span></div></td>
+      <td><div class="align-center"><img alt="Escudo de {{this.NOMBRE}}" title="{{this.NOMBRE}}" src="{{this.IMG}}"></img><span>{{this.NOMBRE}}</span></div></td>
       <td>{{this.PJ}}</td>
       <td>{{this.G}}</td>
       <td>{{this.E}}</td>
