--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tabla de posiciones de la LPF, obtiene ya las ultimas posiciones de tus equipos favoritos de Argentina. River Plate, Boca Juniors, Independiente, Racing Club." />
     <link rel="stylesheet" href="/stylesheets/main.css" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="author" href="https://github.com/blautista" />
     <title>Tabla de posiciones de la Liga Profesional de Fútbol</title>
   </head>
